--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CSE-Mock exam</title>
         <link rel="icon" href="26.ico" type="image/x-icon">
         <link rel="stylesheet" href="stylesheet.css">
