--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li id="read">Please Read!</li>
 
 
-            <li ><a href="https://docs.google.com/document/d/1CyWYggD4FLFqmsmYAXM6fiWmv-SXJJDS/edit"  class="mail"> About Dev </a></li>
+            <li ><a href="https://edster29.github.io/TechEds/"  class="mail"> About Dev </a></li>
             <li ><a href="mailto:qwertymose@gmail.com" class="mail"> Contact </a> </li>
         </ul>
         </nav>
